# cursorhack26

./: .dockerignore  .env.example  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/hooks/state/: continual-learning.json
.github/workflows/: ci.yml
.superset/: config.json
alveslib/: __init__.py  agent.py  logger.py  project.json  scraper.py  story_cli.py  telemetry.py
apps/backend/fastapi/: config.py  project.json  server.py
apps/backend/fastapi/models/: auth.py  story.py  world.py
apps/backend/fastapi/routes/: auth.py  story.py
apps/backend/fastapi/services/: cache.py  gmail.py  scene_builder.py  tts.py  world_planner.py
apps/backend/fastapi/services/auth/: db.py  dependencies.py  google_client.py  session_service.py  types.py  user_repository.py
apps/backend/fastapi/tests/: test_auth_routes.py  test_gmail_service.py  test_scene_builder.py  test_story_flow_e2e.py
apps/webapp/: index.html  package.json  project.json  server.mjs  vite.config.ts
apps/webapp/src/: App.css  App.tsx  index.css  vite-env.d.ts
apps/webapp/src/auth/: AuthGate.tsx  useSession.ts
apps/webapp/src/components/: DialogueOverlay.tsx  GameHud.tsx  MobileControls.tsx  SceneTitle.tsx  WorldCanvas.tsx
apps/webapp/src/game/characters/: types.ts  (+4 more)
apps/worker/: project.json  worker.py
asset_game/animations/: Left Turn.fbx  Start Walking.fbx  Talking.fbx  Turning Right from Mixamo.fbx  Walking Animation (1).fbx  Walking Turn 180.fbx  Waving Animation.fbx
docker/: backend-fastapi.Dockerfile  worker.Dockerfile
src/: gmail_smoke_test.py
(+25 files in other folders)
